--- a/src/Components/Projects/Project.css
+++ b/src/Components/Projects/Project.css
@@ -20,6 +20,7 @@
 .app-container {
   min-height: 100vh;
   width: 100%;
+  margin-top: 20px;
   background: transparent;
   display: flex;
   justify-content: center;
