--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 99vw;
+  width: 100%;
   height: 100vh;
   min-height: 100%; /* allows natural growth */
   min-width: 100%;
